--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^12.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
